# image-processing-with-UnityAR

./: .gitignore  README.md  READMEmd
Assets/Materials/: GrayScaleMaterial.mat  GrayScaleShader.shader  ShineMaterial.mat  ShineShader.shader
Assets/MobileARTemplateAssets/Scripts/: ARTemplateMenuManager.cs
Assets/Plugins/iOS/iOSVision/Editor/: SwiftPostProcessor.cs
Assets/Plugins/iOS/iOSVision/Source/: FastSAM-s.swift  FastSAM.swift  array_utils.swift  iOSVision-Bridging-Header.h  iOSVisionBridge.mm
Assets/Plugins/iOS/iOSVision/Source/FastSAM-s.mlpackage/: Manifest.json
Assets/Plugins/iOS/iOSVision/Source/FastSAM-s.mlpackage/Data/com.apple.CoreML/: model.mlmodel
Assets/Prefabs/: PointMarker.prefab
Assets/Scenes/: ARSampleScene.unity  DetectEdgeSample.unity  FastSAMSample.unity  ImageProcessingInAR.unity  SampleScene.unity
Assets/Scripts/: ARCameraImage.cs  DetectEdgeInARSample.cs  EdgeDetector.cs  FastSAM.cs  FastSAMInARSample.cs  ImageProcessor.cs  PointMarker.cs  ShineEffect.cs  UIManager.cs
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
build_BurstDebugInformation_DoNotShip/StaticLibraries/: lib_burst_generated.txt
cpp/: CMakeLists.txt  FastSAMPostProcessor.hpp  ImageProcess.cpp  ImageProcess.hpp  install.sh  main.cpp
